--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,7 @@
 {
-    "name": "microweber/liteness-template",
+    "name": "Darock template",
     "type": "microweber-template",
-    "require": {
-        "microweber/installers": "*",
-		"components/bootstrap3": "*"
+    "extra": {
+        "folder": "darock"
     }
 }
